<resources>
    <string name="app_name">Cartunator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="text_name">Nome</string>
    <string name="text_ra">Registro de aluno</string>
    <string name="text_password">Senha</string>
    <string name="button_login">Entrar</string>
    <string name="action_logout">Logout</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="menu_cancel_sign_up">Cancelar</string>
    <string name="button_put_credit">Recarregar Cartão</string>
    <string name="title_activity_recharge">Recarregar</string>
    <string name="text_choose_recharge">Escolha um valor para recarga</string>
    <string name="button_recharge_10">R$10,00</string>
    <string name="button_recharge_20">R$20,00</string>
    <string name="button_recharge_30">R$30,00</string>
    <string name="button_recharge_50">R$50,00</string>
    <string name="button_confirm_recharge">Confirmar</string>
    <string name="hint_ra_login">1759843</string>
</resources>
