<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="confirm"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="oslek.cartunator.RechargeActivity"
    tools:showIn="@layout/activity_recharge">

    <RadioButton
        android:id="@+id/buttonRecharge10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:onClick="chooseRecharge10"
        android:text="@string/button_recharge_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChooseRecharge" />

    <RadioButton
        android:id="@+id/buttonRecharge20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"
        android:onClick="chooseRecharge20"
        android:text="@string/button_recharge_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChooseRecharge" />

    <RadioButton
        android:id="@+id/buttonRecharge30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="chooseRecharge30"
        android:text="@string/button_recharge_30"
        app:layout_constraintEnd_toEndOf="@+id/buttonRecharge10"
        app:layout_constraintStart_toStartOf="@+id/buttonRecharge10"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecharge10" />

    <RadioButton
        android:id="@+id/buttonRecharge50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="chooseRecharge50"
        android:text="@string/button_recharge_50"
        app:layout_constraintEnd_toEndOf="@+id/buttonRecharge20"
        app:layout_constraintStart_toStartOf="@+id/buttonRecharge20"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecharge20" />

    <TextView
        android:id="@+id/textChooseRecharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_choose_recharge"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonConfirmRecharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="confirm"
        android:text="@string/button_confirm_recharge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
